client/src/components/Taskbar/taskbar.scss
@use "../../scss/variables";
@use "../../scss/mixins" as *;

.taskbar {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: var(--taskbar-blur);
  display: flex;
  padding: 0.5rem;
  // align-items: center;
  transition: var(--taskbar-item-hover-transition);
  @include no-select-no-drag;
  gap: 0.5rem;

  .taskbar-main {
    display: flex;
    justify-content: space-between;
  }

  &.horizontal {
    .taskbar-main {
      width: 100%;
      flex-direction: row;
    }

    flex-direction: column;
    height: var(--taskbar-height);
    width: 100%;

    .left-or-top-group,
    .right-or-bottom-group {
      flex-direction: row;
    }

    &.open {
      height: 100%;
      background-color: rgba(0, 0, 0, 0.85);
    }
  }

  &.vertical {
    .taskbar-main {
      flex-direction: column;
      height: 100%;
      justify-content: space-between;
    }
    height: 100%;
    width: var(--taskbar-height);

    .left-or-top-group,
    .right-or-bottom-group {
      flex-direction: column;
    }

    &.open {
      width: 100%;
      background-color: rgba(0, 0, 0, 0.85);
    }
  }

  &.bottom {
    bottom: 0;
    align-items: flex-start;
    flex-direction: column;
  }

  &.top {
    top: 0;
    align-items: flex-end;
    flex-direction: column-reverse;
  }

  &.left {
    left: 0;
    align-items: flex-end;
    flex-direction: row-reverse;
  }

  &.right {
    right: 0;
    align-items: flex-start;
    flex-direction: row;
  }

  .left-or-top-group,
  .right-or-bottom-group {
    display: flex;
    align-items: center;
    gap: 0.3rem;
  }

  .start-menu {
    // background-color: magenta;
    // border: 1px solid var(--taskbar-item-border-color);
    // border-radius: var(--taskbar-item-border-radius);
    font-family: var(--small-clock-font-family);
    font-style: italic;
    font-weight: 400;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    overflow: hidden;
    gap: 0.5rem;

    .start-menu-title-bar {
      padding: 0 0;
      width: 100%;
      height: 3rem;
      display: flex;
      justify-content: space-between;

      .left-section {
        span {
          height: 100%;
          width: fit-content;
          display: flex;
          align-items: center;
          font-size: 1.67rem;
          color: whitesmoke;

          img {
            height: 100%;
            object-fit: cover;
            object-position: center;
            transform: translateY(0.1rem);
          }
        }
      }

      .right-section {
        font-style: normal;
        height: 100%;
        display: flex;
        align-items: center;
      }
    }

    .start-menu-section {
      border: 1px solid var(--taskbar-item-border-color);
      border-radius: var(--taskbar-item-border-radius);
      width: 100%;
      overflow: auto;
      flex-grow: 1;
      background-color: rgba(255, 255, 255, 0.07);
      display: flex;
      flex-direction: column;

      .section-title-bar {
        height: 1.5rem;
        // border-bottom: 1px solid var(--taskbar-item-border-color);
        background-color: rgba(255, 255, 255, 0.09);
        text-decoration: underline;
        color: lightgray;

        span {
          height: 100%;
          width: fit-content;
          display: flex;
          align-items: center;
          padding: 0 0.5rem;
          font-size: 1rem;
        }
      }

      .section-container {
        flex-grow: 1;
        padding: 0.5rem;
        display: flex;
        flex-wrap: wrap;
        gap: 0.5rem;

        div {
          max-width: 3rem;
          .item-name {
            font-size: 0.6rem;
            text-align: center;
            // border: 1px solid blue;
            font-style: normal;
            width: 100%;
            color: lightgray;
          }
        }
      }
    }
  }
}

